# django_htmx_messages

./: .pre-commit-config.yaml  README.md  manage.py  pyproject.toml  requirements.txt
django_htmx_messages/: asgi.py  decorators.py  settings.py  urls.py  views.py  wsgi.py
static/: index.css
templates/: _messages.html  _send_button.html  _send_message.html  index.html
