[tool.poetry]
name = "django-htmx-messages"
version = "0.1.0"
description = "Simple demo of HTMX and Django messages."
authors = ["Dan Jacob <danjac2018@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django-htmx = "^1.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
